<resources>
    <string name="app_name">Buffalo_MoBill</string>
    <string name="button_solo">Single player</string>
    <string name="button_multi">Multiplayers</string>
    <string name="gamelist">Liste des jeux</string>
    <string name="game1">Milk Master</string>
    <string name="RulesGame1">Trayez la vache et remplissez le seau le plus vite possible</string>
    <string name="game2">Wild Ride</string>
    <string name="RulesGame2">Tentez de dompter la vache. Pour cela, suivez ses mouvements : \n
- quand elle part à gauche, tournez votre téléphone à gauche \n
- quand elle part à droite, tournez votre téléphone à droite \n
Attention, plus vous résisterez, plus elle sera fâchée…</string>
    <string name="game3">Shady Showdown</string>
    <string name="RulesGame3">Baissez la lumière reçue sur votre appareil pour découvrir le bandit. Une fois visible, attrapez-le !</string>
    <string name="game4">Quick Quiz</string>
    <string name="RulesGame4">Répondez aux trois questions sur l\'univers de Lucky Luke le plus vite possible</string>
    <string name="game5">Cow Catcher</string>
    <string name="RulesGame5">Lancez votre lasso et attrapez le plus vite possible les 8 vaches</string>
    <string name="game6">Prickly Picking</string>
    <string name="RulesGame6">Outch ! Retirez le plus rapidement possible les épines de cactus sur votre vache…</string>
    <string name="Rules">BUT DU JEU</string>
    <string name="random_game_text">Laissez-vous surprendre…</string>
    <string name="random_game">Partie aléatoire</string>
    <string name="next">Suivant</string>
    <string name="score">Score</string>
    <string name="best_score">Meilleur score :</string>
    <string name="votre_score">Votre score :</string>
    <string name="party_finished">PARTIE TERMINÉE</string>
    <string name="back_to_gameList">Retour au menu</string>
    <string name="best_time">"Meilleur temps : "</string>
    <string name="time">"Temps : "</string>
    <string name="won">Vous avez gagné !</string>
    <string name="lost">Vous avez perdu !</string>
    <string name="equality">Match nul !</string>

</resources>